--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "Suresh Mangs",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.5"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
